(lang dune 3.22)

(name randocaml)

(generate_opam_files true)

(source
 (github ipowi02/randocaml))

(authors "Pongor Ádám <viktagugli@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name randocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
